refactor(Router, application.properties): Enhance route matching logic and clean up properties